# mb-app

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  railway.json  run.py
app/: __init__.py  auth.py  config.py  errors.py  forms.py  models.py  routes.py
app/static/js/: devis-form.js
app/templates/: base.html  index.html  login.html
app/templates/clients/: form.html  liste.html
app/templates/devis/: form.html  liste.html  voir.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/factures/: liste.html  voir.html
app/templates/pdf/: devis.html  facture.html
app/templates/prix/: form.html  liste.html
